# RustMessaging

./: Cargo.toml  README.md  notes.txt
migrations/: 20260131004726_init_schema.sql
src/: app.rs  main.rs
src/api/: health.rs  messages.rs  mod.rs  users.rs
src/domain/: message.rs  mod.rs  user.rs
src/infra/: config.rs  db.rs  error.rs  mod.rs
src/repo/: health_repo.rs  message_repo.rs  mod.rs  user_repo.rs
src/service/: health.rs  message_service.rs  mod.rs  user_service.rs
